# powerlifted

./: .clang-format  .clang-tidy  .gitignore  .hgignore  Apptainer.powerlifted  Dockerfile.powerlifted  INIT.md  README.md  Singularity  autoresearch.checks.sh  autoresearch.guard.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  build.py  gmon.out  gripper-typed.lifted  notes.org  power-lifted.py  powerlifted.py
benchmarks/: reference.json  run_suite.py  suite.json
dev/: README.md  run-tests.py
dev/search-tests/: airport-p01.lifted  airport-p05.lifted  blocks-4-0.lifted  gripper-prob01.lifted  movie-prob30.lifted  openstacks-opt08-strips-p01.lifted  organic-synthesis-opt18-strips-p05.lifted  run-tests.py
driver/: arguments.py  limits.py  main.py  portfolio_runner.py  preprocessor.py  single_search_runner.py  utils.py
local-tests/: tarski-initial-state-size.py
local-tests/blind-search-full-reducer/: build-exp.py  run-exp.sh
local-tests/genome-edit-distance-positional/: d-1-10.pddl  d-1-11.pddl  d-1-13.pddl  d-1-2.pddl  d-1-3.pddl  d-1-4.pddl  d-1-5.pddl  d-1-6.pddl  d-1-7.pddl  d-1-8.pddl  d-1-9.pddl  d-10-1.pddl  d-10-11.pddl  d-10-13.pddl  d-10-2.pddl  d-10-3.pddl  d-10-4.pddl  d-10-9.pddl  d-11-1.pddl  d-11-10.pddl  d-11-12.pddl  d-11-13.pddl  d-11-2.pddl  d-11-3.pddl  d-11-4.pddl  d-11-6.pddl  d-11-7.pddl  d-11-9.pddl  d-12-11.pddl  d-12-13.pddl  d-13-1.pddl  d-13-10.pddl  d-13-11.pddl  d-13-12.pddl  d-13-2.pddl  d-13-3.pddl  d-13-4.pddl  d-13-5.pddl  d-13-6.pddl  d-13-7.pddl  (+83 more)
local-tests/genome-edit-distance-split/: d-1-11.pddl  d-1-5.pddl  (+53 more)
reports/: generate-curve-plot.py  generate-histogram.py  generate-scatter-plot.py  requirements.txt
src/search/: CMakeLists.txt  action.cc  action.h  action_schema.cc  action_schema.h  atom.h  axiom.h  axiom_evaluator.cc  axiom_evaluator.h  dump_task_to_PDDL.cc  dump_task_to_PDDL.h  goal_condition.cc  goal_condition.h  hash_structures.cc  hash_structures.h  main.cc  object.h  options.h  parser.cc  parser.h  plan_manager.cc  plan_manager.h  predicate.cc  predicate.h  search.cc  search.h  search_statistics.cc  search_statistics.h  state.cc  state.h  state_packer.h  structures.h  task.cc  task.h  utils.cc  utils.h
src/search/abseil-cpp/absl/flags/: commandlineflag.h
src/search/algorithms/: cartesian_iterator.h  dynamic_bitset.h  kpkc.cc  kpkc.h  priority_queues.h
src/search/database/: hash_join.cc  hash_join.h  hash_semi_join.cc  hash_semi_join.h  join.cc  join.h  join_program.cc  join_program.h  project.cc  project.h  semi_join.cc  semi_join.h  table.cc  table.h  utils.cc  utils.h
src/search/datalog/: achievers.h  arguments.h  datalog.cc  datalog.h  datalog_atom.cc  datalog_atom.h  datalog_fact.cc  datalog_fact.h  datalog_to_task.h  ground_rule.h  object.cc  object.h  rule_matcher.cc  rule_matcher.h  term.h
src/search/datalog/annotations/: annotation.h
src/search/datalog/grounder/: grounder.h  grounder_statistics.h  weighted_grounder.cc  weighted_grounder.h
src/search/datalog/rules/: generic_rule.h  join.h  product.h  project.h  rule_base.cc  rule_base.h  variable_source.h
src/search/datalog/transformations/: action_predicate_removal.h  connected_components.h  generate_edb.h  goal_rule.h  greedy_join.h  normal_form.h  remove_equivalent_rules.h  rule_splitting.h  static_stratum.h  variable_projection.h  variable_renaming.h
src/search/delete_relaxation_heuristics/: delete_relaxation_heuristic.h
src/search/heuristics/: add_heuristic.cc  add_heuristic.h  blind_heuristic.h  datalog_transformation_options.h  ff_heuristic.cc  ff_heuristic.h  goalcount.cc  goalcount.h  heuristic.cc  heuristic.h  heuristic_factory.cc  heuristic_factory.h  hmax_heuristic.cc  hmax_heuristic.h  iterated_width.cc  iterated_width.h  lifted_heuristic.cc  lifted_heuristic.h  random_heuristic.cc  random_heuristic.h  rff_heuristic.cc  rff_heuristic.h  utils.cc  utils.h
src/search/lifted_heuristic/: arguments.h  atom.cc  atom.h  fact.cc  fact.h  lifted_heuristic.cc  lifted_heuristic.h  logic_program.cc  logic_program.h  object.cc  object.h  parser.cc  parser.h  rule_matcher.cc  rule_matcher.h  term.h
src/search/lifted_heuristic/grounders/: grounder.h  weighted_grounder.cc  weighted_grounder.h
src/search/lifted_heuristic/rules/: join.h  product.h  project.h  rule_base.cc  rule_base.h
src/search/novelty/: achieved_ground_atoms.h  atom_counter.h  node_novelty.h  standard_novelty.cc  standard_novelty.h
src/search/open_lists/: greedy_open_list.h  tiebreaking_open_list.h
src/search/search_engines/: alternated_bfws.cc  alternated_bfws.h  alternated_greedy_search.cc  alternated_greedy_search.h  astar_search.cc  astar_search.h  best_first_width_search.cc  best_first_width_search.h  breadth_first_search.cc  breadth_first_search.h  breadth_first_width_search.cc  breadth_first_width_search.h  dual_queue_bfws.cc  dual_queue_bfws.h  greedy_best_first_search.cc  greedy_best_first_search.h  lazy_search.cc  lazy_search.h  nodes.cc  nodes.h  search.cc  search.h  search_factory.cc  search_factory.h  search_space.cc  search_space.h  utils.cc  utils.h
src/search/states/: extensional_states.cc  extensional_states.h  sparse_states.cc  sparse_states.h  state.cc  state.h
src/search/successor_generators/: clique_bron_kerbosch.cc  clique_bron_kerbosch.h  clique_help_functions.cc  clique_help_functions.h  clique_successor_generator.cc  clique_successor_generator.h  clique_successor_generator_apply.cc  full_reducer_successor_generator.cc  full_reducer_successor_generator.h  generic_join_successor.cc  generic_join_successor.h  hypertree_decomposition.cc  hypertree_decomposition.h  inverse_ordered_join_successor.cc  inverse_ordered_join_successor.h  naive_successor.cc  naive_successor.h  ordered_join_successor.cc  ordered_join_successor.h  random_successor.cc  random_successor.h  successor_generator.cc  successor_generator.h  successor_generator_factory.cc  successor_generator_factory.h  yannakakis.cc  yannakakis.h
src/search/utils/: hash.h  logging.cc  logging.h  segmented_vector.h  small_vector.h  string_utils.h  union_find.h
(+452 files in other folders)
